# siem-toolkit

./: LICENSE  README.md
spl-runner/: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  PROJECT_OVERVIEW.md  README.md  main.py  pyproject.toml  requirements.txt  rules.csv
spl-runner/config/: schema.yaml
spl-runner/docs/: HOW_TO_GUIDE.md  OPSEC_CICD.md  OPSEC_LOCAL.md  QUERY_EXAMPLES.md
spl-runner/spl_docs/: en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_bitwise-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_comparison-and-conditional-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_conversion-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_cryptographic-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_date-and-time-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_informational-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_json-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_mathematical-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_multivalue-eval-functions.md  en_splunk-enterprise_search_spl-search-reference_10.2_evaluation-functions_statistical-eval-functions.md  (+177 more)
spl-runner/splunk_client/: __init__.py  auth.py  client.py  (+13 more)
(+1 files in other folders)
